# db_course_work

./: README.md  db_manager.py  db_work.py  main.py  models.py  pyproject.toml  set_db.py
api/: api.py
data/: companies.json
